Set add-opens command line option as default to build out of the box with JDK 16 and newer